# nexus-exercise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: admin.py  storefront.py
app/api/v1/: reseller.py
app/core/: config.py  database.py  errors.py  security.py
app/models/: __init__.py  coupon.py  enums.py  order.py  product.py  reseller.py
app/repositories/: coupon_repository.py  order_repository.py  product_repository.py  reseller_repository.py
app/schemas/: errors.py  product.py  purchase.py
app/services/: pricing.py  product_service.py  purchase_service.py
app/static/: admin.html  index.html  styles.css
tests/: conftest.py  test_admin_api.py  test_pricing.py  test_purchase_concurrency.py  test_reseller_api.py  test_storefront_api.py
