[project]
name = "nexus-coupon-marketplace"
version = "0.1.0"
description = "Backend for a digital coupon marketplace (direct + reseller channels)."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
